// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return a README.md file 1`] = `
"# How to set a development environment

1. Install the packages you selected
2. Add the created configuration files to the environment
3. Happy coding😎"
`;

exports[`should return a README.md file for Gatsby.js project 1`] = `
"# How to set a development environment

1. Install the packages you selected
2. Add the created configuration files to the environment
3. Happy coding😎

## Beginning Gatsby

If you want to use Gatsby with themes, use the starters provided by Gatsby. You can choose and install the necessary starter libraries from [Gatsby Starter Library](https://www.gatsbyjs.com/starters/).

## Creating Gatsby project

This boilerplate is configured based on the following options.

\`\`\`text
✓ Will you be using JavaScript or TypeScript?
• TypeScript

✓ Will you be using a CMS?
• No (or I'll add it later)

✓ Would you like to install a styling system?
• PostCSS

✓ Would you like to install additional features with other plugins?
• Add responsive images
• Add an automatic sitemap
• Generate a manifest file
• Add Markdown and MDX support
\`\`\`

If you don't want to configure the options yourself, use the command \`gatsby new [folder name]\`. Refer to the [Gatsby.js documentation](https://www.gatsbyjs.com/docs/tutorial/getting-started/part-1/#create-a-gatsby-site) to set up the basic settings for Gatsby."
`;

exports[`should return a README.md file for Next.js project 1`] = `
"# How to set a development environment

1. Create an app using \`yarn create next-app <my-app-name>\`
2. Install the packages you selected
3. Add the created configuration files to the environment
4. Happy coding😎"
`;

exports[`should return a README.md file for Next.js project with TypeScript 1`] = `
"# How to set a development environment

1. Create an app using \`yarn create next-app <my-app-name> --typescript\`
2. Install the packages you selected
3. Add the created configuration files to the environment
4. Happy coding😎"
`;

exports[`should return a README.md file for Nuxt.js project 1`] = `
"# How to set a development environment

1. Create an app using \`npx nuxi@latest init <project-name>\`
2. Install the packages you selected
3. Add the created configuration files to the environment
4. Happy coding😎

## Setting PostCSS

You don't need to install the following packages since Nuxt.js already includes them ([See Nuxt.js documentation](https://nuxt.com/docs/getting-started/styling#using-postcss)):

- autoprefixer
- cssnano
- postcss-import
- postcss-url

Configure postcss in \`nuxt.config.ts\` instead of \`postcss.config.js\`.

## Modules

Building the project might take a long time when using modules from the Nuxt team and community. Unfortunately, I haven't found the solution. Refer to the Nuxt.js documentation for more information:

- [Modules](https://nuxt.com/modules)
- [Exploring Nuxt Modules](https://nuxt.com/docs/guide/concepts/modules#exploring-nuxt-modules)"
`;

exports[`should return a README.md file for Nuxt.js project with Webpack 1`] = `
"# How to set a development environment

1. Create an app using \`npx nuxi@latest init <project-name>\`
2. Install the packages you selected
3. Add the created configuration files to the environment
4. Happy coding😎

## Initialising Webpack

This is not the best practise. Use your own methods.

1. Execute \`npx webpack init\`
2. If an error like \`For using this command you need to install: '@webpack-cli/generators' package.\` occurred, re-execute the command
3. Choose the options you need

## Setting PostCSS

You don't need to install the following packages since Nuxt.js already includes them ([See Nuxt.js documentation](https://nuxt.com/docs/getting-started/styling#using-postcss)):

- autoprefixer
- cssnano
- postcss-import
- postcss-url

Configure postcss in \`nuxt.config.ts\` instead of \`postcss.config.js\`.

## Modules

Building the project might take a long time when using modules from the Nuxt team and community. Unfortunately, I haven't found the solution. Refer to the Nuxt.js documentation for more information:

- [Modules](https://nuxt.com/modules)
- [Exploring Nuxt Modules](https://nuxt.com/docs/guide/concepts/modules#exploring-nuxt-modules)"
`;

exports[`should return a README.md file for React.js project 1`] = `
"# How to set a development environment

1. Create an app using \`yarn create vite <my-app-name> --template react-ts\`
2. Install the packages you selected
3. Add the created configuration files to the environment
4. Happy coding😎"
`;

exports[`should return a README.md file for Webpack project 1`] = `
"# How to set a development environment

1. Install the packages you selected
2. Add the created configuration files to the environment
3. Happy coding😎

## Initialising Webpack

This is not the best practise. Use your own methods.

1. Execute \`npx webpack init\`
2. If an error like \`For using this command you need to install: '@webpack-cli/generators' package.\` occurred, re-execute the command
3. Choose the options you need"
`;
